# pythonProject111

./: .coverage  .gitignore  pyproject.toml
data/: products.json
src/: class_category.py  class_product.py  main.py  mixin.py  test_class.py  utils.py
